services/admin-dashboard-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-dashboard-internal
spec:
  selector:
    app: admin-dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
